--- a/parallel.cabal
+++ b/parallel.cabal
@@ -6,9 +6,10 @@ maintainer:	libraries@haskell.org
 synopsis:	parallel programming library
 description:
     This package provides a library for parallel programming.
+build-type:     Simple
 exposed-modules:
 	Control.Parallel
 	Control.Parallel.Strategies
 extensions:	CPP
-build-depends: base, containers, array
+build-depends: base >= 3, containers, array
 
