rename these so that they don't clash with the concurrency tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,10 +7,10 @@ include $(TOP)/mk/boilerplate.mk
 include $(TOP)/mk/test.mk
 
 
-.PHONY: test068
-test068 :
+.PHONY: par003
+par003 :
 	@echo Compiling
-	$(TEST_HC) -v0 -fforce-recomp --make conc068.hs -o conc068 -threaded
+	$(TEST_HC) -v0 -fforce-recomp --make par003.hs -o par003 -threaded -rtsopts
 	@echo Running
-	$(PYTHON) -c 'for i in range(11111): print "abqszzzq"' | ./conc068 +RTS -N2
+	$(PYTHON) -c 'for i in range(11111): print "abqszzzq"' | ./par003 +RTS -N2
 	@echo Done
