--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,7 +10,7 @@ include $(TOP)/mk/test.mk
 .PHONY: par003
 par003 :
 	@echo Compiling
-	$(TEST_HC) -v0 -fforce-recomp --make par003.hs -o par003 -threaded -rtsopts
+	"$(TEST_HC)" -v0 -fforce-recomp --make par003.hs -o par003 -threaded -rtsopts
 	@echo Running
 	$(PYTHON) -c 'for i in range(11111): print "abqszzzq"' | ./par003 +RTS -N2
 	@echo Done
