Update API to match Haskell Symposium'2010 paper

--- a/parallel.cabal
+++ b/parallel.cabal
@@ -16,6 +16,7 @@ source-repository head
 
 library {
   exposed-modules:
+        Control.Seq
         Control.Parallel
         Control.Parallel.Strategies
   extensions:	CPP BangPatterns
