--- a/parallel.cabal
+++ b/parallel.cabal
@@ -12,7 +12,7 @@ cabal-version:  >=1.6
 
 source-repository head
     type:     git
-    location: http://darcs.haskell.org/packages/parallel.git/
+    location: http://git.haskell.org/packages/parallel.git
 
 library {
   exposed-modules:
