--- a/parallel.cabal
+++ b/parallel.cabal
@@ -1,5 +1,6 @@
 name:           parallel
-version:        3.2.0.4
+version:        3.2.0.5
+-- NOTE: Don't forget to update ./changelog.md
 license:        BSD3
 license-file:   LICENSE
 maintainer:     libraries@haskell.org
@@ -17,11 +18,6 @@ source-repository head
     type:     git
     location: http://git.haskell.org/packages/parallel.git
 
-source-repository this
-    type:     git
-    location: http://git.haskell.org/packages/parallel.git
-    tag:      parallel-3.2.0.4-release
-
 library
     default-language: Haskell2010
     other-extensions:
@@ -38,7 +34,7 @@ library
 
     build-depends:
         array      >= 0.3 && < 0.6,
-        base       >= 4.3 && < 4.8,
+        base       >= 4.3 && < 4.9,
         containers >= 0.4 && < 0.6,
         deepseq    >= 1.1 && < 1.4
 
