--- a/parallel.cabal
+++ b/parallel.cabal
@@ -4,6 +4,7 @@ version:        3.2.0.5
 license:        BSD3
 license-file:   LICENSE
 maintainer:     libraries@haskell.org
+bug-reports:    https://github.com/haskell/parallel/issues
 synopsis:       Parallel programming library
 category:       Control, Parallelism
 build-type:     Simple
@@ -16,7 +17,7 @@ extra-source-files: changelog.md
 
 source-repository head
     type:     git
-    location: http://git.haskell.org/packages/parallel.git
+    location: https://github.com/haskell/parallel.git
 
 library
     default-language: Haskell2010
