Add `--ghc-option=-Werror` to Travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
 
 script:
  - cabal configure -v2
- - cabal build
+ - cabal build --ghc-option=-Werror
  - cabal check || [ "$CABALVER" == "1.16" ]
  - cabal sdist
  - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
