Add doc links to the description (#14)

--- a/parallel.cabal
+++ b/parallel.cabal
@@ -12,6 +12,15 @@ cabal-version:  >=1.10
 tested-with:    GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4
 description:
     This package provides a library for parallel programming.
+    .
+    For documentation start from the "Control.Parallel.Strategies"
+    module below.
+    .
+    For more tutorial documentation, see the book <http://simonmar.github.io/pages/pcph.html Parallel and Concurrent Programming in Haskell>.
+    .
+    To understand the principles behind the library, see
+    <http://simonmar.github.io/bib/papers/strategies.pdf Seq no more: Better Strategies for Parallel Haskell>.
+
 
 extra-source-files: changelog.md
 
