Update Travis script to use haskell-ci

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,24 @@
 *.run.stdout
 *.eventlog
 *.genscript
+dist-*
+cabal-dev
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
 
 # Backup files
 *~
