Generalize to type-changing strategies
The `(Strategy a, dot)` semigroup generalizes very naturally to
a `(Strategy, dot)` semigroupoid. This makes it much easier to
fuse maps with strategies.

--- a/parallel.cabal
+++ b/parallel.cabal
@@ -40,6 +40,7 @@ library
         Control.Seq
         Control.Parallel
         Control.Parallel.Strategies
+        Control.Parallel.Strategies.Poly
 
     build-depends:
         array      >= 0.3 && < 0.6,
