--- a/parallel.cabal
+++ b/parallel.cabal
@@ -9,7 +9,7 @@ synopsis:       Parallel programming library
 category:       Control, Parallelism
 build-type:     Simple
 cabal-version:  >=1.10
-tested-with:    GHC==8.4.3, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4
+tested-with:    GHC==8.6.1, GHC==8.4.3, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4
 description:
     This package provides a library for parallel programming.
     .
