--- a/.travis.yml
+++ b/.travis.yml
@@ -150,5 +150,5 @@ script:
   # Build without installed constraints for packages in global-db
   - if $UNCONSTRAINED; then rm -f cabal.project.local; echo cabal new-build -w ${HC} --disable-tests --disable-benchmarks all; else echo "Not building without installed constraints"; fi
 
-# REGENDATA ["-o",".travis.yml","--ghc-head","cabal.project"]
+# REGENDATA ["--output=.travis.yml","--config=cabal.haskell-ci","cabal.project"]
 # EOF
