--- a/parallel.cabal
+++ b/parallel.cabal
@@ -44,6 +44,7 @@ library
     build-depends:
         array      >= 0.3 && < 0.6,
         base       >= 4.3 && < 4.17,
+        bifunctor                 ,
         containers >= 0.4 && < 0.7,
         deepseq    >= 1.1 && < 1.5
 
