--- a/parallel.cabal
+++ b/parallel.cabal
@@ -1,5 +1,7 @@
+cabal-version:  >=1.10
 name:           parallel
 version:        3.2.2.0
+x-revision:     7
 -- NOTE: Don't forget to update ./changelog.md
 license:        BSD3
 license-file:   LICENSE
@@ -8,8 +10,27 @@ bug-reports:    https://github.com/haskell/parallel/issues
 synopsis:       Parallel programming library
 category:       Control, Parallelism
 build-type:     Simple
-cabal-version:  >=1.10
-tested-with:    GHC==9.6.1, GHC==9.0.1, GHC==8.10.4, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4
+
+tested-with:
+  GHC == 9.8.0
+  GHC == 9.6.3
+  GHC == 9.4.7
+  GHC == 9.2.8
+  GHC == 9.0.2
+  GHC == 8.10.7
+  GHC == 8.8.4
+  GHC == 8.6.5
+  GHC == 8.4.4
+  GHC == 8.2.2
+  GHC == 8.0.2
+  GHC == 7.10.3
+  -- Drop these old GHCs from CI:
+  -- GHC == 7.8.4
+  -- GHC == 7.6.3
+  -- GHC == 7.4.2
+  -- GHC == 7.2.2
+  -- GHC == 7.0.4
+
 description:
     This package provides a library for parallel programming.
     .
@@ -43,9 +64,9 @@ library
 
     build-depends:
         array      >= 0.3 && < 0.6,
-        base       >= 4.3 && < 4.19,
-        containers >= 0.4 && < 0.7,
-        deepseq    >= 1.1 && < 1.5
+        base       >= 4.3 && < 4.20,
+        containers >= 0.4 && < 0.8,
+        deepseq    >= 1.1 && < 1.6
 
     ghc-options: -Wall
 
