--- a/parallel.cabal
+++ b/parallel.cabal
@@ -68,11 +68,24 @@ library
         containers >= 0.4 && < 0.8,
         deepseq    >= 1.1 && < 1.6
 
-    ghc-options: -Wall
-
-    if impl(ghc >= 6.11)
+    ghc-options:
+        -Wall
         -- To improve parallel performance:
-        ghc-options: -feager-blackholing
+        -feager-blackholing
 
     if impl(ghc >= 7.2.1)
         build-depends: ghc-prim
+
+test-suite tests
+    default-language: Haskell2010
+    type: exitcode-stdio-1.0
+    hs-source-dirs: tests
+    main-is: Main.hs
+    other-modules:
+        Par
+        Seq
+        Util
+
+    build-depends: array, base, containers, nothunks, parallel, tasty, tasty-hunit
+
+    ghc-options: -Wall -threaded
